--- a/image-slider/package.json
+++ b/image-slider/package.json
@@ -31,6 +31,7 @@
     "angular2": "2.0.0-beta.16",
     "core-js": "^2.2.0",
     "ng2-bootstrap": "^1.0.15",
+    "ng2-file-upload": "^1.0.0-beta.1",
     "rxjs": "5.0.0-beta.2",
     "zone.js": "~0.6.12"
   },
